# swormEcolution

./: CMakeLists.txt  README.md
algoritms/include/: Client.h  DataBase.h  Evolution.h  Logger.h  Server.h
algoritms/src/: Clientfunc.cpp  DataBase.cpp  Evolution.cpp  Logger.cpp  Serverfunc.cpp  main.cpp
data/: data.csv  log.csv
